Change index.html and delete README.txt style.css dir_img

--- a/index.html
+++ b/index.html
@@ -1,53 +1,27 @@
 <!DOCTYPE html>
-<html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>homework10_1</title>
-    <link rel="stylesheet" href="/style.css">
-</head>
-
-<body>
-    <div class="header">
-        <h1 class="blog">Blog</h1>
-        <p class="header--p">Dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris
-            nisi ut aliquip ex ea
-            commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit.</p>
-    </div>
-    <div class="conteiner-img">
-        <div class="div1">
-            <img src="/img/kivi.png" alt="">
-            <p class="conteiner-img__div1">Green Smoothies: Too Much of a Good Thing?</p>
-            <p class="conteiner-img__div1-futer">By Auskteez - 2 hours ago</p>
-        </div>
-        <span class="conteiner-img__span1">
-            20 NOV
-        </span>
-        <div class="div2">
-            <img src="/img/cup.png" alt="">
-            <p class="conteiner-img__div2"> Growing Food and a “Thirst” for Innovation</p>
-            </p>
-            <p class="conteiner-img__div2-futer">By Auskteez - 3 hours ago</p>
-        </div>
-        <span class="conteiner-img__span2">
-            14 NOV
-        </span>
-        <div class="div3"><img src="/img/raspberry.png" alt="">
-            <p class="conteiner-img__div3">Pesticides & Food: What You Need to Know</p>
-            <p class="conteiner-img__div3-futer">By Auskteez - 6 hours ago</p>
-        </div>
-        <span class="conteiner-img__span3">
-            10 NOV
-        </span>
-        <div class="div4"></div>
-
-        <div class="div5"></div>
-        <div class="div6"></div>
-        <button>VIEW MORE</button>
-    </div>
-
-</body>
-
+<html>
+ <head>
+  <title>Web_default</title>
+        <style>
+                body {
+                        background-color: #b85dff;
+                }
+                h1 {
+                        text-align: center;
+                        font-size: 3em;
+                        color: white;
+                        margin-top: 50px;
+                }
+                .text {
+                        text-align: center;
+                        font-size: 2em;
+                        color: #03779F;
+                        margin-top: 50px;
+                }
+        </style>
+ </head>
+  <body>
+        <h1>Deploy from GitHub with Jenkin</h1>
+        <div class="text">KAF21_TASP_JENKINS</div>
+  </body>
 </html>
