--- a/index.html
+++ b/index.html
@@ -4,18 +4,18 @@
   <title>Web_default</title>
         <style>
                 body {
-                        background-color: #b85dff;
+                        background-color: #6bff5d;
                 }
                 h1 {
                         text-align: center;
                         font-size: 3em;
-                        color: white;
+                        color: yellow;
                         margin-top: 50px;
                 }
                 .text {
                         text-align: center;
                         font-size: 2em;
-                        color: #03779F;
+                        color: #13039f;
                         margin-top: 50px;
                 }
         </style>
