Change the color and size of text in the index.html file

--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
                 }
                 .text {
                         text-align: center;
-                        font-size: 2em;
-                        color: #13039f;
+                        font-size: 3em;
+                        color: #ce0692;
                         margin-top: 50px;
                 }
         </style>
