--- a/index.html
+++ b/index.html
@@ -4,17 +4,17 @@
   <title>Web_default</title>
         <style>
                 body {
-                        background-color: #6bff5d;
+                        background-color: white;
                 }
                 h1 {
                         text-align: center;
                         font-size: 3em;
-                        color: black;
+                        color: grey;
                         margin-top: 50px;
                 }
                 .text {
                         text-align: center;
-                        font-size: 2em;
+                        font-size: 3em;
                         color: #ce0692;
                         margin-top: 50px;
                 }
