--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
                 h1 {
                         text-align: center;
                         font-size: 3em;
-                        color: grey;
+                        color: black;
                         margin-top: 50px;
                 }
                 .text {
