--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <title>Web_default</title>
         <style>
                 body {
-                        background-color: blue;
+                        background-color: yellow;
                 }
                 h1 {
                         text-align: center;
